# rag_pydantic_ai

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260502_0001_create_app_users.py  20260503_0002_create_rag_schema.py  20260504_0003_add_message_source_document_name.py
backend/app/: dependencies.py  main.py
backend/app/api/: chat.py  documents.py  me.py
backend/app/auth/: clerk.py
backend/app/chat/: __init__.py  rag_orchestration.py  schemas.py  service.py  source_enrichment.py  title_generation.py
backend/app/core/: config.py
backend/app/db/: __init__.py  session.py
backend/app/documents/: __init__.py  chunking.py  extraction.py  schemas.py  service.py
backend/app/ingestion/: __init__.py  service.py  worker.py
backend/app/models/: __init__.py  app_user.py  rag.py
backend/app/retrieval/: __init__.py  embeddings.py  service.py
backend/app/storage/: __init__.py  dependencies.py  fake.py  s3.py  service.py
backend/app/users/: __init__.py  schemas.py  sync.py
backend/evals/: __init__.py  runner.py
backend/tests/: conftest.py  ensure_test_database.py  test_chat_sessions.py  test_chat_stream.py  test_config.py  test_cors.py  test_database_schema.py  test_document_extraction.py  test_documents.py  test_health.py  test_ingestion_recovery.py  test_ingestion_worker.py  test_ingestion_worker_runtime.py  test_me.py  test_rag_orchestration.py  test_retrieval.py
frontend/: .dockerignore  .prettierignore  Dockerfile  index.html  (+6 more)
(+44 files in other folders)
