[project]
name = "rag-service-backend"
version = "0.1.0"
description = "FastAPI backend foundation for the RAG service."
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.2",
    "boto3>=1.34.0",
    "fastapi>=0.111.0",
    "pgvector>=0.2.5",
    "psycopg[binary]>=3.2.1",
    "pydantic-ai-slim[openai]>=0.1.0",
    "pydantic-settings>=2.2.1",
    "pypdf>=4.2.0",
    "pyjwt[crypto]>=2.8.0",
    "sqlalchemy>=2.0.31",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.2.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
